--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
 
     <div id="root"></div>
     <!-- <script src="js/bundle.min.js"></script> -->
-    <script src="jstesco/bundletesco.min.js"></script>
+    <!-- <script src="jstesco/bundletesco.min.js"></script> -->
 
+    <script src="jstesco/bundle.min.js"></script>
+    
 </body>
 </html>
