--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <!-- <script src="js/bundle.min.js"></script> -->
     <!-- <script src="jstesco/bundletesco.min.js"></script> -->
 
-    <script src="jstesco/bundle.min.js"></script>
+    <script src="js/bundle.min.js"></script>
     
 </body>
 </html>
